@@ -1,22 +1,23 @@
 package com.mcupdater.mculib.gui;
 
 import com.mcupdater.mculib.MCULib;
-import com.mojang.blaze3d.systems.RenderSystem;
-import com.mojang.blaze3d.vertex.PoseStack;
 import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.AbstractWidget;
 import net.minecraft.client.gui.narration.NarrationElementOutput;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.Style;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraftforge.energy.IEnergyStorage;
+import net.minecraft.util.FormattedCharSequence;
+import net.neoforged.neoforge.energy.IEnergyStorage;
 
 import javax.annotation.Nonnull;
-import java.util.Collections;
+import java.util.List;
 
 public class WidgetPower extends AbstractWidget {
     private final Orientation orientation;
     private final Minecraft minecraft;
-    private ResourceLocation ENERGY = new ResourceLocation(MCULib.MODID, "textures/gui/energy.png");
+    private ResourceLocation ENERGY = ResourceLocation.fromNamespaceAndPath(MCULib.MODID, "textures/gui/energy.png");
     private IEnergyStorage energyHandler;
     private int COLOR_BACKGROUND = 0xff8b8b8b;
     private int COLOR_TOPLEFT = 0x7f373737;
@@ -34,32 +35,31 @@ public class WidgetPower extends AbstractWidget {
         return false;
     }
     @Override
-    public void renderButton(@Nonnull PoseStack poseStack, int mouseX, int mouseY, float partialTicks) {
+    public void renderWidget(@Nonnull GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTicks) {
         //draw Box
-        this.fillGradient(poseStack,x + 1, y + 1, x + width - 1, y + height - 1, COLOR_BACKGROUND, COLOR_BACKGROUND); // interior
-        this.hLine(poseStack, x, x+width-1, y, COLOR_TOPLEFT); // top
-        this.vLine(poseStack, x, y, y + height-1, COLOR_TOPLEFT); // left
-        this.hLine(poseStack, x, x+width-1, y + height-1, COLOR_BOTTOMRIGHT); // bottom
-        this.vLine(poseStack, x + width-1, y, y + height-1, COLOR_BOTTOMRIGHT); // right
+        guiGraphics.fillGradient(getX() + 1, getY() + 1, getX() + width - 1, getY() + height - 1, COLOR_BACKGROUND, COLOR_BACKGROUND); // interior
+        guiGraphics.hLine(getX(), getX()+width-1, getY(), COLOR_TOPLEFT); // top
+        guiGraphics.vLine(getX(), getY(), getY() + height-1, COLOR_TOPLEFT); // left
+        guiGraphics.hLine(getX(), getX()+width-1, getY() + height-1, COLOR_BOTTOMRIGHT); // bottom
+        guiGraphics.vLine(getX() + width-1, getY(), getY() + height-1, COLOR_BOTTOMRIGHT); // right
 
         //fill Gauge
         Minecraft minecraft = Minecraft.getInstance();
-        RenderSystem.setShaderTexture(0, ENERGY);
         int energyOffset;
         int transform = (int) minecraft.level.getLevelData().getGameTime() % 256;
         switch (orientation) {
             case VERTICAL -> {
                 energyOffset = getEnergyScaled(this.height - 2);
-                this.blit(poseStack, this.x + 1, this.y + (this.height - energyOffset) - 1, transform, transform, this.width - 2, energyOffset);
+                guiGraphics.blit(ENERGY, this.getX() + 1, this.getY() + (this.height - energyOffset) - 1, transform, transform, this.width - 2, energyOffset);
             }
             case HORIZONAL -> {
                 energyOffset = getEnergyScaled(this.width - 2);
-                this.blit(poseStack, this.x + 1, this.y + 1, transform, transform, energyOffset, this.height - 2);
+                guiGraphics.blit(ENERGY, this.getX() + 1, this.getY() + 1, transform, transform, energyOffset, this.height - 2);
             }
         }
 
         if (this.isHoveredOrFocused()) {
-            renderToolTip(poseStack, mouseX, mouseY);
+            renderEnergyTooltip();
         }
     }
 
@@ -67,17 +67,15 @@ public class WidgetPower extends AbstractWidget {
         return this.energyHandler.getMaxEnergyStored() != 0 ? (int) (height * ((this.energyHandler.getEnergyStored() * 1.0d) / (this.energyHandler.getMaxEnergyStored() * 1.0d))) : height;
     }
 
-    @Override
-    public void renderToolTip(@Nonnull PoseStack poseStack, int x, int y){
-        super.renderToolTip(poseStack, x, y);
+    public void renderEnergyTooltip(){
         String msg = energyHandler.getEnergyStored() + " / " + energyHandler.getMaxEnergyStored() + " FE";
         if (this.minecraft.screen != null) {
-            this.minecraft.screen.renderComponentTooltip(poseStack, Collections.singletonList(Component.literal(msg)), x, y);
+            this.minecraft.screen.setTooltipForNextRenderPass(List.of(FormattedCharSequence.forward(msg, Style.EMPTY)));
         }
     }
 
     @Override
-    public void updateNarration(NarrationElementOutput p_169152_) {
+    public void updateWidgetNarration(NarrationElementOutput p_169152_) {
 
     }
 
